<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginLeft="@dimen/horizontal_margin"
    android:layout_marginRight="@dimen/horizontal_margin"
    android:layout_height="wrap_content">

    <com.test.easynvest.util.typeface.FontButton
        app:customFont="din_pro_medium"
        android:id="@+id/btnSend"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_signup_send"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/button_selector" />
</RelativeLayout>