<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/checkBoxLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_marginLeft="@dimen/horizontal_margin"
    android:layout_marginRight="@dimen/horizontal_margin">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkBoxRegisterEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:button="@drawable/checkbox_selector"/>

        <com.test.easynvest.util.typeface.FontTextView
            app:customFont="din_pro_regular"
            android:id="@+id/textCheckboxOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test"
            android:textSize="16dp"
            android:gravity="center_vertical|left" />
</LinearLayout>